--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>mango</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link type="image/png" sizes="16x16" rel="icon" href="imagenes/favicon.png">
 </head>
 <body>
-<h1> Mango</h1>
+<br>
+<br>
+<br>
 <canvas id="canvas" width="1000px" height="650px">
     Tu navegador no soporta CANVAS
 </canvas>
