--- a/index.html
+++ b/index.html
@@ -2,17 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>mango</title>
+    <title>Mango run</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link type="image/png" sizes="16x16" rel="icon" href="imagenes/favicon.png">
 </head>
 <body>
-<br>
-<br>
-<br>
-<canvas id="canvas" width="1000px" height="650px">
-    Tu navegador no soporta CANVAS
-</canvas>
+<!--<img src="imagenes/LOGO.png" alt="Mango: cosecha de oro" style="height: 40px;">
+<h1>MANGO RUN</h1>-->
+<header>
+    <nav>
+        <ul>
+            <li>
+                    <img src="imagenes/LOGO.png" alt="Mango: cosecha de oro" width="88" height="90" style="margin-bottom: -25px;"> 
+            </li>
+            <li> MANGO: COSECHA DE ORO</li>
+        </ul>
+        
+      <!-- <ul>
+        <li><a href="#">Mango: cosecha de oro</a></li>
+           <li><a href="#">Servicios</a></li>
+           <li><a href="#">Contacto</a></li>
+       </ul>-->
+    </nav>
+ </header>
+ <br><br> <br><br> <br><br>
+ <div class="divCanvas">
+    <canvas id="canvas" width="1000px" height="650px">
+        Tu navegador no soporta CANVAS
+    </canvas> 
+ </div>
+ 
 </body>
 </html>
 <script src="js/script.js"></script>
